# pierre-papier-ciseaux

./: .gitignore  .pre-commit-config.yaml  EcranPartie.excalidraw  LICENSE  README.md  pyproject.toml
ppc_game/: ecran_accueil.py  ecran_partie.py  main.py  ui.py  utils.py
