[tool.poetry]
name = "ppc-game"
version = "0.1.0"
description = ""
authors = ["Etienne Bömcke <etienne@awellhealth.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.1"

[tool.poetry.scripts]
ppc-game = "ppc_game.main:main"

[tool.poetry.dev-dependencies]
black = "^24.3.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
